Login functional - without hash bcrypt encryption method

--- a/ProjectApplication/Views/Home/Index.cshtml
+++ b/ProjectApplication/Views/Home/Index.cshtml
@@ -1,8 +1,37 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+  ViewData["Title"] = "Inicio";
+  Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <div class="align-content-around">Learn about the project and its features.</div>
+<div class="col-12">
+    <div class="row">
+        
+        <div class="col-md-4">
+            <div class="shadow-lg card">
+                <img class="text-center" src="~/Assets/image/image1.jpg" alt="">
+                <div class="text-center">
+                    <p>Asistencia en Carretera y Auxilio las 24 horas del día
+                       Contamos con modernos vehículos para remolcar o transportar de manera segura y sin causar ningún daño tu carro.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="shadow-lg card">
+                <img class="text-center" src="~/Assets/image/image2.jpg" alt="">
+                <div class="text-center">
+                    <p>Traslados de todo tipo de vehículo
+                        Trasladamos vehículos pesados como autobuses, camiones, tractomulas, colectivos, entre otros, con grúas de PLUMA UNDER LIFT Y PLANCHON.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="shadow-lg card">
+                <img class="text-center" src="~/Assets/image/image3.jpg" alt="">
+                <div class="text-center">
+                    <p>Traslados de Maquinaria
+                        Transportamos maquinaria de construcción, excavadoras, retroexcavadoras, aplanadoras, pavimentadoras, tractores, semipesados y ligeras</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
