--- a/ProjectApplication/Views/Shared/_Layout.cshtml
+++ b/ProjectApplication/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - ProjectApplication</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/ProjectApplication.styles.css" asp-append-version="true"/>
+        <link rel="stylesheet" href="~/ProjectApplication.styles.css" asp-append-version="true"/>
 </head>
 <body>
 <header>
@@ -20,10 +20,10 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Pagina principal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Iniciar sesión</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +38,7 @@
 
 <footer class="border-top footer text-muted">
     <div class="container">
-        &copy; 2023 - ProjectApplication - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2023 - ProjectApplication
     </div>
 </footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
