--- a/ProjectApplication/Views/Login/Index.cshtml
+++ b/ProjectApplication/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Microsoft.AspNetCore.Components.Web
 @model ProjectApplication.Views.Login.Index
 
 @{
@@ -42,21 +43,23 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="login-form">
-            <h2>Login Form - Bootstrap 3</h2>
-            <form action="/Login/Index" method="POST">
-                <div class="form-group">
-                    <label for="username">Email:</label>
-                    <input type="email" class="form-control" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Contraseña:</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-            </form>
-        </div>
+<div class="container">
+    <div class="login-form">
+        <h2>Iniciar sesión</h2>
+        <form action="/Login/Index" method="POST">
+            <div class="form-group">
+                <label for="username">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Contraseña:</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+        </form>
     </div>
+</div>
 </body>
+<script>
+</script>
 </html>
